--- a/Graph/outline.html
+++ b/Graph/outline.html
@@ -1,7 +1,7 @@
-<h2>Frontend</h2>
+<h2>Graph</h2>
 
-<a href="/Frontend/">About</a></br>
-<a href="/Frontend/UI">UI</a></br>
-<a href="/Frontend/Graph">Graph</a></br>
-<a href="/Frontend/Examples">Examples</a></br>
-<a href="/Frontend/Run">Run</a></br>
+<a href="/Graph/">About</a></br>
+<a href="/Graph/UI">UI</a></br>
+<a href="/Graph/Graph">Graph</a></br>
+<a href="/Graph/Examples">Examples</a></br>
+<a href="/Graph/Run">Run</a></br>
