--- a/ChatBot/outline.html
+++ b/ChatBot/outline.html
@@ -2,4 +2,5 @@
 
 <a href="/ChatBot/">About</a></br>
 <a href="/ChatBot/UI">UI</a></br>
+<a href="/ChatBot/examples">Examples</a></br>
 <a href="/ChatBot/Gen Cookbook">Gen Cookbook</a></br>
